[gd_scene load_steps=23 format=3 uid="uid://5rfy1kin8dar"]

[ext_resource type="Script" uid="uid://b4ep0sk83u2yl" path="res://Cables/PowerController.gd" id="1_ky1xg"]
[ext_resource type="Texture2D" uid="uid://xhk4rn5mtbpv" path="res://my/emptyTile.png" id="2_wp3ix"]
[ext_resource type="Texture2D" uid="uid://cu5lwrech36gq" path="res://my/outline.png" id="3_wm3sx"]
[ext_resource type="Texture2D" uid="uid://cirpv5j2dl16g" path="res://my/lighning.png" id="4_ecqvc"]
[ext_resource type="Texture2D" uid="uid://ljk8vdm6ic" path="res://my/Blackpowerbutton.png" id="5_2tewb"]
[ext_resource type="Texture2D" uid="uid://dxshsc14jmexr" path="res://my/powerButton.png" id="6_ck12j"]
[ext_resource type="Script" uid="uid://b50324mxbuano" path="res://PowerAnimations.gd" id="7_jjs2v"]
[ext_resource type="Texture2D" uid="uid://c640te23utmfn" path="res://my/BLANK.png" id="8_la174"]
[ext_resource type="Texture2D" uid="uid://c6t3wvrd21v7u" path="res://my/Attempt2Sparks-Sheet.png" id="9_yx06m"]

[sub_resource type="Animation" id="Animation_iotsf"]
resource_name = "OFF"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("symbol:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_2tewb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparksAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"OFF"]
}

[sub_resource type="Animation" id="Animation_mfdv2"]
resource_name = "ON"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("symbol:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ck12j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparksAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ON"]
}

[sub_resource type="Animation" id="Animation_lc2xo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("symbol:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ecqvc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparksAnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ON"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lc2xo"]
_data = {
&"OFF": SubResource("Animation_iotsf"),
&"ON": SubResource("Animation_mfdv2"),
&"RESET": SubResource("Animation_lc2xo")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6ep8k"]
atlas = ExtResource("8_la174")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxywb"]
atlas = ExtResource("9_yx06m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ka84"]
atlas = ExtResource("9_yx06m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwj2k"]
atlas = ExtResource("9_yx06m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_votsg"]
atlas = ExtResource("9_yx06m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d1de"]
atlas = ExtResource("9_yx06m")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oep3m"]
atlas = ExtResource("9_yx06m")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wl7tt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ep8k")
}],
"loop": true,
"name": &"OFF",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxywb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ka84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwj2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_votsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d1de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oep3m")
}],
"loop": true,
"name": &"ON",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujyyc"]
size = Vector2(12, 12)

[node name="powerTerminal" type="Node2D"]

[node name="PowerController" type="Node2D" parent="."]
script = ExtResource("1_ky1xg")
metadata/_custom_type_script = "uid://b4ep0sk83u2yl"

[node name="tilecolour" type="Sprite2D" parent="."]
modulate = Color(0.442911, 0.442911, 0.442911, 1)
texture = ExtResource("2_wp3ix")

[node name="outline" type="Sprite2D" parent="."]
texture = ExtResource("3_wm3sx")

[node name="symbol" type="Sprite2D" parent="."]
texture = ExtResource("4_ecqvc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lc2xo")
}
script = ExtResource("7_jjs2v")

[node name="SparksAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wl7tt")
animation = &"ON"
autoplay = "ON"

[node name="ColliderStaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderStaticBody2D"]
shape = SubResource("RectangleShape2D_ujyyc")

[connection signal="PowerOFF" from="PowerController" to="AnimationPlayer" method="_on_power_controller_power_off"]
[connection signal="PowerON" from="PowerController" to="AnimationPlayer" method="_on_power_controller_power_on"]
